# dcbot

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
dcbot/: __main__.py  cli.py  config.py  dc.py  tasks.py
dcbot/crawler/: __init__.py  feargreed.py  tickers.py
tests/crawler/: test_feargreed.py  test_ticker.py
